Ajuste para autenticação de alunos
